--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,36 +2,51 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+	<!-- App Identity -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+
 	<key>CFBundleDisplayName</key>
 	<string>Tots Paris</string>
+
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+
 	<key>CFBundleName</key>
 	<string>tots_paris</string>
+
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
+
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+
+	<!-- UI -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+
+	<!-- Orientation -->
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -39,48 +54,40 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	
-	<!-- Push Notifications -->
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>remote-notification</string>
-	</array>
-	
-	<!-- Firebase -->
+
+	<!-- Firebase (CRITICAL FIX) -->
 	<key>FirebaseAppDelegateProxyEnabled</key>
-	<false/>
-	
-	<!-- App Transport Security -->
+	<true/>
+
+	<!-- App Transport Security (CRITICAL FIX FOR API CRASH) -->
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	
+
 	<!-- Permissions -->
 	<key>NSCameraUsageDescription</key>
 	<string>Tots Paris needs camera access to take photos and scan QR codes.</string>
+
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Tots Paris needs access to your photos to upload and share images.</string>
+
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Tots Paris needs permission to save images to your photo library.</string>
+
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Tots Paris uses the microphone for voice and video features.</string>
+
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Tots Paris uses your location to show nearby delivery and store options.</string>
+
 	<key>NSUserTrackingUsageDescription</key>
 	<string>Tots Paris uses data to personalize your shopping experience.</string>
-	
-	<!-- URL Schemes -->
+
+	<!-- Google Sign-In -->
 	<key>CFBundleURLTypes</key>
 	<array>
-		<!-- Google Sign-In -->
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
@@ -89,29 +96,18 @@
 				<string>com.googleusercontent.apps.1091304297452-lspenpp11uqjnq60rf6mag820n5262o0</string>
 			</array>
 		</dict>
-		<!-- Stripe Payment Deep Link (CRITICAL - ADD THIS) -->
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>com.totsparis.payment</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>totsparis</string>
-			</array>
-		</dict>
 	</array>
-	
-	<!-- LSApplicationQueriesSchemes for external apps (PayPal, payment apps) -->
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>paypal</string>
-		<string>com.paypal.ppclient.touch.v1</string>
-		<string>com.paypal.ppclient.touch.v2</string>
-		<string>org-appextension-feature-password-management</string>
-	</array>
-	
+
+	<!-- Performance -->
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+
+	<!-- Encryption -->
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+
 </dict>
 </plist>
