--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,7 +31,7 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
-  # Ensure OneSignal is linked correctly
+  # OneSignal requirement
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0.0'
 
   target 'RunnerTests' do
@@ -44,16 +44,16 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      # FIX 1: Bypass Swift 6 spacing errors (Required for flutter_sslcommerz)
+      # Fix for Swift 6/Xcode 16 compatibility
       config.build_settings['SWIFT_VERSION'] = '5.0'
       
-      # FIX 2: Set Deployment Target to 15.0 for Firebase 2026
+      # Force iOS 15.0 for all dependencies to satisfy Firebase/Stripe requirements
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
       
-      # FIX 3: Prevent PhaseScriptExecution failures on Codemagic/Xcode 16+
+      # Prevent PhaseScriptExecution failures on modern Xcode
       config.build_settings['ENABLE_USER_SCRIPT_SANDBOXING'] = 'NO'
       
-      # FIX 4: Architecture cleanup
+      # Architecture cleanup for Apple Silicon / Intel compatibility
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386 arm64'
     end
   end
