--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: maanstore
 description: Kids brand.
 publish_to: 'none'
@@ -23,7 +22,7 @@ dependencies:
   nb_utils: ^7.0.5
   font_awesome_flutter: ^10.7.0
   iconly: ^1.0.1
-  syncfusion_flutter_sliders: ^31.2.15 # Ensure this matches your Syncfusion license
+  syncfusion_flutter_sliders: ^31.2.15
   carousel_slider: ^5.0.0
   readmore: ^3.0.0
   flutter_slidable: ^4.0.3
@@ -46,18 +45,17 @@ dependencies:
   # Push Notifications
   onesignal_flutter: ^5.3.5
   
-  # Firebase (Synchronized versions and crash to fix the error)
-  firebase_core: ^4.3.0
-  firebase_auth: ^6.1.3   # Changed from 5.3.0 to match core 4.3.0
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
   google_sign_in: ^6.2.1
-  firebase_crashlytics: ^5.0.6
+  firebase_crashlytics: ^4.1.3
 
-  # Payment Gateways
-  # Pinned to 11.5.0 because 12.x requires Dart 3.8+ (You are on 3.5.3)
+  # Payment Gateways (STABLE ONES)
   flutter_stripe: ^11.5.0 
   flutter_paypal: ^0.2.1
   flutter_tap_payment: ^0.2.1
-  flutter_sslcommerz: ^3.0.1
+  # Removed flutter_sslcommerz due to Swift 6/iOS 18 incompatibility
   razorpay_flutter: ^1.3.3
 
   # Utils & Media
@@ -73,7 +71,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0 # Changed from 6.0.0 to match Dart 3.5.3
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
