--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,5 @@
-platform :ios, '12.0'
+# Update to 13.0 to support modern webview features
+platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -42,7 +43,8 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     
     target.build_configurations.each do |config|
-      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      # Force all pods to 13.0 to resolve WKWebpagePreferences error
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
     end
   end
 end
