--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,11 +59,12 @@ dependencies:
   shared_preferences: ^2.3.2
   flutter_riverpod: ^2.5.3
   onesignal_flutter: ^5.2.6
-  firebase_core: ^3.0.0
-  firebase_auth: ^5.0.0
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  firebase_crashlytics: ^4.2.4
   google_sign_in: ^6.2.1
   shimmer: ^3.0.0
-  webview_flutter: ^4.0.0
+  webview_flutter: ^4.9.0
   share_plus: ^12.0.1
   provider: ^6.1.2
   flag: ^7.0.0
@@ -80,7 +81,7 @@ dependencies:
   community_material_icon: ^5.9.55
   blurrycontainer: ^2.1.0
   flutter_sound: ^9.16.3
-  image_picker: ^1.0.7
+  image_picker: ^1.2.1
   pinput: ^5.0.0
 
 
