--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,13 +14,13 @@ workflows:
         script: |
           keychain initialize
 
-      # 🔥 CREATE FIREBASE PLIST (IMPROVED)
+      # 🔥 CREATE FIREBASE PLIST (EARLY)
       - name: Create GoogleService-Info.plist
         script: |
           mkdir -p ios/Runner
           echo "$IOS_FIREBASE_SECRET" > ios/Runner/GoogleService-Info.plist
-          # Verify the file was created
-          ls -la ios/Runner/GoogleService-Info.plist
+          # Ensure file exists for Xcode's build phase
+          touch ios/Runner/GoogleService-Info.plist
 
       # 🔥 FETCH AD-HOC SIGNING (NOT APP STORE)
       - name: Fetch AdHoc signing files
@@ -41,7 +41,7 @@ workflows:
       - name: Install dependencies
         script: |
           flutter pub get
-          # Force clean pod install to recognize new deployment target 13.0
+          # Clean pods to ensure the new deployment target (13.0) and Plist are recognized
           rm -rf ios/Pods
           rm -f ios/Podfile.lock
           cd ios
@@ -51,7 +51,7 @@ workflows:
       # ✅ BUILD AD-HOC IPA
       - name: Build IPA (Release / AdHoc)
         script: |
-          # Use --release explicitly
+          # Use explicit release mode
           flutter build ipa --release --no-codesign
 
     artifacts:
